--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </audio>
 
 <head>
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
+<link rel="shortcut icon" href="https://github.com/SharonIsabelleZhong/SharonZhongWeb/blob/main/favicon.ico" type="image/x-icon" />
 <title>Sharon Isabelle Timotius 鍾銀香</title>
 
 <meta charset="utf-8">
