--- a/index.html
+++ b/index.html
@@ -113,5 +113,5 @@ display_rfresh();
 </div>
   
 </body>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="webico.ico" type="image/x-icon" />
 </html>
