--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-<audio controls autoplay loop>
-<source src="spiritedaway.mp3" type="audio/mpeg">
-</audio>
+  <audio controls autoplay loop>
+  <source src="spiritedaway.mp3" type="audio/mpeg">
+  </audio>
   
-<title>Sharon Isabelle Timotius 鍾銀香</title>
+  <title>Sharon Isabelle Timotius 鍾銀香</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -113,5 +113,5 @@ display_rfresh();
 </div>
   
 </body>
-<link rel="shortcut icon" href="webico.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </html>
