--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head><link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <audio controls autoplay loop>
   <source src="spiritedaway.mp3" type="audio/mpeg">
   </audio>
@@ -113,5 +113,5 @@ display_rfresh();
 </div>
   
 </body>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  
 </html>
