--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<head><link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /></head>
   <audio controls autoplay loop>
   <source src="spiritedaway.mp3" type="audio/mpeg">
   </audio>
@@ -58,7 +58,7 @@ body {
 
 a:hover {color: #ff0000;}
 </style>
-</head>
+
 <body>
 
 <div class="header">
